# sh4geo

./: .gitignore  CMakeLists.txt  README.md
include/: coeff_matrix_2d.hpp  coeff_matrix_storage.hpp  stokes_coefficients.hpp
src/: stokes_coefficients.cpp
test/should_fail/: coeff_matrix2d_tricolwise_reduce_runtime_error.cpp  coeff_matrix2d_trirowwise_reduce_runtime_error.cpp  coeff_matrix_2d_tricolwise23_runtime_error.cpp  coeff_matrix_2d_tricolwise_cp_runtime_error.cpp
test/unit_test/: coeff_matrix2d_colwise_reduce.cpp  coeff_matrix2d_colwise_reduce_2.cpp  coeff_matrix2d_colwise_reduce_3.cpp  coeff_matrix2d_rowwise_reduce.cpp  coeff_matrix2d_rowwise_reduce_2.cpp  coeff_matrix2d_tricolwise_reduce.cpp  coeff_matrix2d_tricolwise_reduce_2.cpp  coeff_matrix2d_trirowwise_reduce.cpp  coeff_matrix_2d_colwise.cpp  coeff_matrix_2d_colwise_cp.cpp  coeff_matrix_2d_from_proxy_colwise.cpp  coeff_matrix_2d_from_proxy_ltcw.cpp  coeff_matrix_2d_from_proxy_ltrw.cpp  coeff_matrix_2d_from_proxy_rowise.cpp  coeff_matrix_2d_rowise.cpp  coeff_matrix_2d_rowwise_cp.cpp  coeff_matrix_2d_tricolwise.cpp  coeff_matrix_2d_tricolwise2.cpp  coeff_matrix_2d_trirowise.cpp  coeff_matrix_2d_trirowwise_cp.cpp
